# lectures

.github/workflows/: semgrep.yml
computer_architectures/slides/: 01_Zahlendarstellung.pptx
computer_based_statistics/: Supporting_URLs.md
computer_based_statistics/exercises/: blatt01.tex
computer_based_statistics/src/: PythonExamples.ipynb  Untitled.ipynb  Untitled1.ipynb  descriptive_stats_example.ipynb  e-commerce-example.ipynb  probability_distributions.ipynb  requirements.txt  spotify_songs_exploration.ipynb
dependency_inversion_guice_tutorial/: .gitignore  QUICKSTART.md  README.md  pom.xml
embedded_systems_engineering/: 1_Embedded Systems Software Engineering.pptx  2_Embedded Systems_Modellierung.pptx  3_Embedded Systems_Endliche Automaten und State Charts.pptx  5_Embedded Systems_Simulink.pptx  5_Embedded Systems_SystemC.pptx  5_Embedded Systems_Verifikation mit UPPAAL.pptx  7 - ROS.pptx  7 - ROS_v2_concepts_v4.pptx  Bewertung_Embedded_Systems_Vorlesung.md  mutex_fail.xml  mutex_ok.xml
embedded_systems_engineering/Modelle/: haltestelle.xml  haltestelle_extended.xml  haltestelle_extended2.xml  nuclear_power_plant.xml  test.xml
embedded_systems_engineering/exercises/: blatt01.tex  blatt02.tex  blatt03.tex  blatt04.tex  blatt05.tex  blatt06.tex  blatt_template.tex
embedded_systems_engineering/experimente/: 3dmatrix  3dmatrix.c  linked_list  linked_list.c  linked_list_simple  linked_list_simple.c  lltest  lltest.c  multithreading  multithreading.c  posix_thread_demo  posix_thread_demo.c  test  test.c  tree  tree.c
embedded_systems_engineering/latex_slides/: c_einfuehrung_ese.tex  robotik_prinzipien_ese.tex  rust_einfuehrung_ese.tex
embedded_systems_engineering/ros_projects/leader_follower/src/follower_node/: package.xml  setup.cfg  setup.py
embedded_systems_engineering/ros_projects/leader_follower/src/follower_node/follower_node/: follower_node.py  follower_node_skeleton.py
embedded_systems_engineering/ros_projects/leader_follower/src/simulation/: package.xml  setup.py
embedded_systems_engineering/ros_projects/leader_follower/src/simulation/config/: nav2_params.yaml  slam_params.yaml
embedded_systems_engineering/ros_projects/leader_follower/src/simulation/launch/: real_robot.launch.py  simulation.launch.py
embedded_systems_engineering/ros_projects/leader_follower/src/simulation/rviz/: multi_robot.rviz
embedded_systems_engineering/ros_projects/leader_follower/src/simulation/worlds/: exploration_world.world
embedded_systems_engineering/ros_projects/leader_follower/src/visualization_node/: package.xml  setup.cfg  setup.py
embedded_systems_engineering/ros_projects/leader_follower/src/visualization_node/visualization_node/: visualization_node.py
security/master/: 0_Security_Kick Off.pptx
security/src/: aes.py  arithmetic_factor_groups.py  caesar.py  exercise3.py  exercise_blatt1.py  one_time_pad.py  requirements.txt  rsa.py  test.py
security/ws23/: 5_NetworkSecurity.pptx
security_advanced/: README.md
security_advanced/tools_and_techniques_material/: enumeration_with_nmap.md  generate_pdfs.sh
theoretische_grundlagen_informatik/: 1_vorlesung.tex
theoretische_grundlagen_informatik/exercises/: WeitereProbeklausur.tex  blatt01.tex  blatt01_new.tex  blatt02_.tex  blatt02_2024.tex  blatt02_2024_solution.tex  blatt02_2025.tex  blatt02_altes_blatt_.tex  blatt02_new.tex  blatt03_.tex  blatt03_2025.tex  blatt04_.tex  blatt05_.tex  klausur.tex  (+11 more)
theoretische_informatik/: README.md
tools/: pick_random_person.py  wheel_of_fortune.py
(+153 files in other folders)
