<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation</name>
  <version>0.1.0</version>
  <description>
    Gazebo simulation package for the leader-follower multi-robot system.
    Contains world files, launch files, configuration, and RViz presets.
  </description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>leader_node</exec_depend>
  <exec_depend>follower_node</exec_depend>
  <exec_depend>visualization_node</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
